// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the snapshot 1`] = `
<div
  className="makeStyles-root-1"
  onBlur={[Function]}
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <input
    autoComplete="off"
    multiple={true}
    onChange={[Function]}
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
    type="file"
  />
  <div
    className="makeStyles-border-2 "
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root makeStyles-icon-4 "
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M23 18V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2zM8.5 12.5l2.5 3.01L14.5 11l4.5 6H5l3.5-4.5z"
      />
    </svg>
    <div
      className="makeStyles-text-6"
    >
      Just drop 
      an image
       to instantly convert it to PNG
    </div>
    <div
      className="makeStyles-subtext-7"
    >
      Your images are never uploaded (
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
        href="https://github.com/imgdrop/imgdrop/blob/master/PRIVACY.md"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        target="_blank"
      >
        Privacy Policy
      </a>
      )
    </div>
    <div
      className="makeStyles-subtext-7"
    >
      Made with pride by a gay man
       
      <span
        aria-label="pride flag"
        role="img"
      >
        🏳️‍🌈
      </span>
       
      (
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
        href="https://github.com/imgdrop/imgdrop"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        target="_blank"
      >
        Github
      </a>
      )
    </div>
  </div>
</div>
`;

exports[`matches the snapshot when active 1`] = `
<div
  className="makeStyles-root-1"
>
  <input />
  <div
    className="makeStyles-border-2 makeStyles-activeBorder-3"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root makeStyles-icon-4 makeStyles-activeIcon-5"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M23 18V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2zM8.5 12.5l2.5 3.01L14.5 11l4.5 6H5l3.5-4.5z"
      />
    </svg>
    <div
      className="makeStyles-text-6"
    >
      Just drop 
      an image
       to instantly convert it to PNG
    </div>
    <div
      className="makeStyles-subtext-7"
    >
      Your images are never uploaded (
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
        href="https://github.com/imgdrop/imgdrop/blob/master/PRIVACY.md"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        target="_blank"
      >
        Privacy Policy
      </a>
      )
    </div>
    <div
      className="makeStyles-subtext-7"
    >
      Made with pride by a gay man
       
      <span
        aria-label="pride flag"
        role="img"
      >
        🏳️‍🌈
      </span>
       
      (
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
        href="https://github.com/imgdrop/imgdrop"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        target="_blank"
      >
        Github
      </a>
      )
    </div>
  </div>
</div>
`;

exports[`matches the snapshot when provided a name 1`] = `
<div
  className="makeStyles-root-1"
  onBlur={[Function]}
  onClick={[Function]}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDragOver={[Function]}
  onDrop={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <input
    autoComplete="off"
    multiple={true}
    onChange={[Function]}
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
    type="file"
  />
  <div
    className="makeStyles-border-2 "
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root makeStyles-icon-4 "
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M23 18V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2zM8.5 12.5l2.5 3.01L14.5 11l4.5 6H5l3.5-4.5z"
      />
    </svg>
    <div
      className="makeStyles-text-6"
    >
      Just drop 
      a PNG image
       to instantly convert it to PNG
    </div>
    <div
      className="makeStyles-subtext-7"
    >
      Your images are never uploaded (
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
        href="https://github.com/imgdrop/imgdrop/blob/master/PRIVACY.md"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        target="_blank"
      >
        Privacy Policy
      </a>
      )
    </div>
    <div
      className="makeStyles-subtext-7"
    >
      Made with pride by a gay man
       
      <span
        aria-label="pride flag"
        role="img"
      >
        🏳️‍🌈
      </span>
       
      (
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
        href="https://github.com/imgdrop/imgdrop"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        target="_blank"
      >
        Github
      </a>
      )
    </div>
  </div>
</div>
`;
